--- a/experiments/mcq.ipynb
+++ b/experiments/mcq.ipynb
@@ -44,52 +44,394 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# from langchain.llms import OpenAI\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.chains import SequentialChain\n",
+    "from langchain.callbacks import get_openai_callback\n",
+    "import PyPDF2\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "RESPONSE_JSON = {\n",
+    "    \"1\": {\n",
+    "        \"mcq\": \"multiple choice question\",\n",
+    "        \"options\": {\n",
+    "            \"a\": \"choice here\",\n",
+    "            \"b\": \"choice here\",\n",
+    "            \"c\": \"choice here\",\n",
+    "            \"d\": \"choice here\",\n",
+    "        },\n",
+    "        \"correct\": \"correct answer\",\n",
+    "    },\n",
+    "    \"2\": {\n",
+    "        \"mcq\": \"multiple choice question\",\n",
+    "        \"options\": {\n",
+    "            \"a\": \"choice here\",\n",
+    "            \"b\": \"choice here\",\n",
+    "            \"c\": \"choice here\",\n",
+    "            \"d\": \"choice here\",\n",
+    "        },\n",
+    "        \"correct\": \"correct answer\",\n",
+    "    },\n",
+    "    \"3\": {\n",
+    "        \"mcq\": \"multiple choice question\",\n",
+    "        \"options\": {\n",
+    "            \"a\": \"choice here\",\n",
+    "            \"b\": \"choice here\",\n",
+    "            \"c\": \"choice here\",\n",
+    "            \"d\": \"choice here\",\n",
+    "        },\n",
+    "        \"correct\": \"correct answer\",\n",
+    "    },\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "TEMPLATE=\"\"\"\n",
+    "Text:{text}\n",
+    "You are an expert MCQ maker. Given the above text, it is your job to \\\n",
+    "create a quiz  of {number} multiple choice questions for {subject} students in {tone} tone. \n",
+    "Make sure the questions are not repeated and check all the questions to be conforming the text as well.\n",
+    "Make sure to format your response like  RESPONSE_JSON below  and use it as a guide. \\\n",
+    "Ensure to make {number} MCQs\n",
+    "### RESPONSE_JSON\n",
+    "{response_json}\n",
+    "\n",
+    "\"\"\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "quiz_generation_prompt=PromptTemplate(\n",
+    "    input_variables=[\"text\",\"number\",\"subject\",\"tone\",\"response_json\"],\n",
+    "    template=TEMPLATE\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "quiz_chain=LLMChain(llm=llm,prompt=quiz_generation_prompt,output_key=\"quiz\",verbose=True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "TEMPLATE2=\"\"\"\n",
+    "You are an expert english grammarian and writer. Given a Multiple Choice Quiz for {subject} students.\\\n",
+    "You need to evaluate the complexity of the question and give a complete analysis of the quiz. Only use at max 50 words for complexity analysis. \n",
+    "if the quiz is not at per with the cognitive and analytical abilities of the students,\\\n",
+    "update the quiz questions which needs to be changed and change the tone such that it perfectly fits the student abilities\n",
+    "Quiz_MCQs:\n",
+    "{quiz}\n",
+    "\n",
+    "Check from an expert English Writer of the above quiz:\n",
+    "\"\"\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "quiz_evaluation_prompt=PromptTemplate(input_variables=[\"subject\", \"quiz\"], template=TEMPLATE2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "review_chain=LLMChain(llm=llm, prompt=quiz_evaluation_prompt, output_key=\"review\", verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_evaluate_chain=SequentialChain(chains=[quiz_chain, review_chain], input_variables=[\"text\", \"number\", \"subject\", \"tone\", \"response_json\"],\n",
+    "                                        output_variables=[\"quiz\", \"review\"], verbose=True,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"D:\\\\AIML Projects\\\\genai\\\\mcq_gen\\\\data.txt\",'r') as f:\n",
+    "    TEXT=f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"1\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}, \"2\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}, \"3\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}}'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## serializing the python dictionary into json-format string\n",
+    "json.dumps(RESPONSE_JSON)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NUMBER=5 \n",
+    "SUBJECT=\"biology\"\n",
+    "TONE=\"simple\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SequentialChain chain...\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "Text:Biology is the scientific study of life.[1][2][3] It is a natural science with a broad scope but has several unifying themes that tie it together as a single, coherent field.[1][2][3] For instance, all organisms are made up of cells that process hereditary information encoded in genes, which can be transmitted to future generations. Another major theme is evolution, which explains the unity and diversity of life.[1][2][3] Energy processing is also important to life as it allows organisms to move, grow, and reproduce.[1][2][3] Finally, all organisms are able to regulate their own internal environments.[1][2][3][4][5]\n",
+      "\n",
+      "Biologists are able to study life at multiple levels of organization,[1] from the molecular biology of a cell to the anatomy and physiology of plants and animals, and evolution of populations.[1][6] Hence, there are multiple subdisciplines within biology, each defined by the nature of their research questions and the tools that they use.[7][8][9] Like other scientists, biologists use the scientific method to make observations, pose questions, generate hypotheses, perform experiments, and form conclusions about the world around them.[1]\n",
+      "\n",
+      "Life on Earth, which emerged more than 3.7 billion years ago,[10] is immensely diverse. Biologists have sought to study and classify the various forms of life, from prokaryotic organisms such as archaea and bacteria to eukaryotic organisms such as protists, fungi, plants, and animals. These various organisms contribute to the biodiversity of an ecosystem, where they play specialized roles in the cycling of nutrients and energy through their biophysical environment.\n",
+      "You are an expert MCQ maker. Given the above text, it is your job to create a quiz  of 5 multiple choice questions for biology students in simple tone. \n",
+      "Make sure the questions are not repeated and check all the questions to be conforming the text as well.\n",
+      "Make sure to format your response like  RESPONSE_JSON below  and use it as a guide. Ensure to make 5 MCQs\n",
+      "### RESPONSE_JSON\n",
+      "{\"1\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}, \"2\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}, \"3\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}}\n",
+      "\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "You are an expert english grammarian and writer. Given a Multiple Choice Quiz for biology students.You need to evaluate the complexity of the question and give a complete analysis of the quiz. Only use at max 50 words for complexity analysis. \n",
+      "if the quiz is not at per with the cognitive and analytical abilities of the students,update the quiz questions which needs to be changed and change the tone such that it perfectly fits the student abilities\n",
+      "Quiz_MCQs:\n",
+      "\n",
+      "{\n",
+      "\"1\": {\n",
+      "\"mcq\": \"What is the scientific study of life called?\",\n",
+      "\"options\": {\n",
+      "\"a\": \"Chemistry\",\n",
+      "\"b\": \"Biology\",\n",
+      "\"c\": \"Physics\",\n",
+      "\"d\": \"Geology\"\n",
+      "},\n",
+      "\"correct\": \"b\"\n",
+      "},\n",
+      "\"2\": {\n",
+      "\"mcq\": \"Which theme in biology explains the unity and diversity of life?\",\n",
+      "\"options\": {\n",
+      "\"a\": \"Evolution\",\n",
+      "\"b\": \"Energy processing\",\n",
+      "\"c\": \"Cell theory\",\n",
+      "\"d\": \"Homeostasis\"\n",
+      "},\n",
+      "\"correct\": \"a\"\n",
+      "},\n",
+      "\"3\": {\n",
+      "\"mcq\": \"What is the basic unit of life that processes hereditary information?\",\n",
+      "\"options\": {\n",
+      "\"a\": \"Atoms\",\n",
+      "\"b\": \"Molecules\",\n",
+      "\"c\": \"Cells\",\n",
+      "\"d\": \"Tissues\"\n",
+      "},\n",
+      "\"correct\": \"c\"\n",
+      "},\n",
+      "\"4\": {\n",
+      "\"mcq\": \"What is the process that allows organisms to move, grow, and reproduce?\",\n",
+      "\"options\": {\n",
+      "\"a\": \"Photosynthesis\",\n",
+      "\"b\": \"Respiration\",\n",
+      "\"c\": \"Energy processing\",\n",
+      "\"d\": \"Homeostasis\"\n",
+      "},\n",
+      "\"correct\": \"c\"\n",
+      "},\n",
+      "\"5\": {\n",
+      "\"mcq\": \"When did life on Earth emerge?\",\n",
+      "\"options\": {\n",
+      "\"a\": \"1 million years ago\",\n",
+      "\"b\": \"100 million years ago\",\n",
+      "\"c\": \"3.7 billion years ago\",\n",
+      "\"d\": \"10 billion years ago\"\n",
+      "},\n",
+      "\"correct\": \"c\"\n",
+      "}\n",
+      "}\n",
+      "\n",
+      "Check from an expert English Writer of the above quiz:\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "#https://python.langchain.com/docs/modules/model_io/llms/token_usage_tracking\n",
+    "\n",
+    "#How to setup Token Usage Tracking in LangChain\n",
+    "with get_openai_callback() as cb:\n",
+    "    response=generate_evaluate_chain(\n",
+    "        {\n",
+    "            \"text\": TEXT,\n",
+    "            \"number\": NUMBER,\n",
+    "            \"subject\":SUBJECT,\n",
+    "            \"tone\": TONE,\n",
+    "            \"response_json\": json.dumps(RESPONSE_JSON)\n",
+    "        }\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Tokens:1354\n",
+      "Prompt Tokens:1004\n",
+      "Completion Tokens:350\n",
+      "Total Cost:0.002206\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Total Tokens:{cb.total_tokens}\")\n",
+    "print(f\"Prompt Tokens:{cb.prompt_tokens}\")\n",
+    "print(f\"Completion Tokens:{cb.completion_tokens}\")\n",
+    "print(f\"Total Cost:{cb.total_cost}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1': {'mcq': 'What is the scientific study of life called?',\n",
+       "  'options': {'a': 'Chemistry',\n",
+       "   'b': 'Biology',\n",
+       "   'c': 'Physics',\n",
+       "   'd': 'Geology'},\n",
+       "  'correct': 'b'},\n",
+       " '2': {'mcq': 'Which theme in biology explains the unity and diversity of life?',\n",
+       "  'options': {'a': 'Evolution',\n",
+       "   'b': 'Energy processing',\n",
+       "   'c': 'Cell theory',\n",
+       "   'd': 'Homeostasis'},\n",
+       "  'correct': 'a'},\n",
+       " '3': {'mcq': 'What is the basic unit of life that processes hereditary information?',\n",
+       "  'options': {'a': 'Atoms', 'b': 'Molecules', 'c': 'Cells', 'd': 'Tissues'},\n",
+       "  'correct': 'c'},\n",
+       " '4': {'mcq': 'What is the process that allows organisms to move, grow, and reproduce?',\n",
+       "  'options': {'a': 'Photosynthesis',\n",
+       "   'b': 'Respiration',\n",
+       "   'c': 'Energy processing',\n",
+       "   'd': 'Homeostasis'},\n",
+       "  'correct': 'c'},\n",
+       " '5': {'mcq': 'When did life on Earth emerge?',\n",
+       "  'options': {'a': '1 million years ago',\n",
+       "   'b': '100 million years ago',\n",
+       "   'c': '3.7 billion years ago',\n",
+       "   'd': '10 billion years ago'},\n",
+       "  'correct': 'c'}}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quizes=response.get(\"quiz\")\n",
+    "json.loads(quizes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The complexity of the quiz is appropriate for biology students, testing their knowledge of basic biological concepts. The questions are clear and concise, with options that require critical thinking. However, the tone could be more engaging for students by incorporating more visuals or real-life examples.'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review=response.get('review')\n",
+    "review"
+   ]
   },
   {
    "cell_type": "code",
